<resources>
    <string name="app_name">Review Exchange</string>

    <!--    bottom navigation-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <!--    review display strategy-->
    <string name="review_display_mode">Review display mode:</string>
    <string name="slides">Slides</string>
    <string name="scrollable_list">Scrollable list</string>

    <!--    log in and registration-->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>


    <string name="latest_reviews">LATEST REVIEWS</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo odio purus, vel molestie dui facilisis eget. Nullam et varius ligula. In eget accumsan arcu. Cras condimentum posuere nibh dapibus volutpat. Sed molestie ac nunc nec feugiat. Proin tempor, dui quis aliquam euismod, elit turpis pharetra eros, in tempus velit ipsum sit amet erat. Pellentesque sed nisi vestibulum, gravida nisl et, eleifend dolor. Suspendisse potenti. Phasellus eget viverra mi, condimentum porttitor tortor. Sed eget mauris elementum, iaculis nisl faucibus, iaculis dui. Quisque viverra metus vel ipsum gravida dignissim. Nam sed cursus eros. Donec elementum nulla nulla, sit amet feugiat elit iaculis non. Sed vel accumsan orci. Sed sed urna tempor, suscipit justo vitae, accumsan ex. Mauris in posuere orci, a feugiat tellus. Morbi molestie lectus in ligula efficitur, in tristique metus dignissim. Aenean a dignissim augue. Vivamus sapien urna, aliquam ultrices lobortis id, pretium ac eros. In vel pellentesque massa. Ut auctor, dui a vehicula lacinia, sem erat mollis augue, nec dapibus urna nibh ut ligula. Donec accumsan velit vitae turpis bibendum, in pharetra est rhoncus. Quisque in suscipit ex. Nunc placerat eleifend erat, eget placerat tortor consequat in. Aenean at cursus augue, id pharetra purus. Donec tristique justo lacus. Mauris id ultricies dolor, eu vestibulum tellus. Aliquam at leo finibus, varius odio ac, mattis turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec tincidunt varius neque, vitae semper est iaculis vel. Nam sagittis eget libero sit amet tincidunt. Curabitur posuere, ante a iaculis mollis, neque augue euismod enim, ut vulputate sem mauris non ligula. Phasellus a malesuada massa. Nulla lacinia vulputate leo, a sagittis purus dictum et. Donec vestibulum nunc turpis, sed hendrerit leo vehicula a. Integer egestas posuere cursus. Curabitur sed mauris non felis imperdiet tincidunt. Curabitur accumsan neque a massa ultrices, ut dignissim ante finibus. Sed massa lorem, pulvinar quis quam sed, bibendum sollicitudin enim. Nunc enim lacus, sagittis eget rhoncus eu, cursus cursus dui. Sed quis ipsum molestie, tristique ante sed, scelerisque dui. Etiam luctus nulla ut posuere faucibus. Morbi scelerisque lectus vel sapien lobortis aliquam. Sed orci nibh, pellentesque id venenatis vel, tristique at elit. Praesent scelerisque quis augue nec ornare. Fusce ac tortor faucibus, viverra neque quis, condimentum arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris scelerisque arcu enim, ut lobortis sem pharetra sed. Duis vehicula sagittis enim, sit amet tempus risus euismod id. Nullam tristique, dolor eget tristique fringilla, diam dui aliquet lorem, a convallis neque felis sit amet erat. Sed malesuada molestie vestibulum. Integer lobortis felis in purus posuere cursus. Cras sed vulputate dolor. Nulla bibendum, velit non interdum venenatis, tortor dui finibus ante, in gravida magna mi eget eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras id metus sed massa placerat eleifend.</string>
    <string name="submit_review">submit review</string>
    <string name="write_your_review_here">Write your review here!</string>
    <string name="write_your_review">Write your review</string>
    <string name="my_reviews">My reviews</string>
    <string name="home_page">Home page</string>
    <string name="no_reviews_found">There are no reviews of this book yet</string>
    <string name="log_out">log out</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="submit_book">submit book</string>

</resources>