<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment">


    <EditText
        android:id="@+id/etLogInEmail"
        android:layout_marginHorizontal="@dimen/marginHorizontal"
        android:layout_marginVertical="@dimen/marginVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/etLogInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etLogInPassword"
        android:layout_marginHorizontal="@dimen/marginHorizontal"
        android:layout_marginVertical="@dimen/marginVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/btnLogInLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLogInEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogInLogIn"
        android:layout_marginHorizontal="@dimen/marginHorizontal"
        android:layout_marginVertical="@dimen/marginVertical"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/btnLogInRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLogInPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogInRegister"
        android:layout_marginHorizontal="@dimen/marginHorizontal"
        android:layout_marginVertical="@dimen/marginVertical"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogInLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>